--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="content">
     <p>The most comprehensive 
         <br>
-        Chair Simulator ever made</p>
+        Chair Simulator ever made!</p>
 </div>
 <div class="link">
 <a href="https://store.steampowered.com/app/1610870/Chair_Simulator/" target="_blank" class="btn">
